2006-03-09  Danilo Šegan  <danilo@gnome.org>

	* releases.py (Releases.list_modules): Add percentages for single domains.

2006-03-09  Danilo Šegan  <danilo@gnome.org>

	* releases.py:
	* templates/language-release-doc-stats-modules.tmpl: 
	* templates/language-release-ui-stats-modules.tmpl: 
	Display module and branch info in tooltips.

2006-03-09  Danilo Šegan  <danilo@gnome.org>

	* index.html: Updated text.

	* templates/list-languages.tmpl:
	* teams.py (TranslationTeams.compare_langs): 
	Added function, sort languages.

2006-03-09  Danilo Šegan  <danilo@gnome.org>

	* teams.py: List languages when desired.
	* templates/list-languages.tmpl: Added.

2006-03-09  Danilo Šegan  <danilo@gnome.org>

	* .htaccess: Set DirectoryIndex to index.html.
	* index.html: Added static page.

2006-03-09  Danilo Šegan  <danilo@gnome.org>

	* templates/language-release-doc-stats-modules.tmpl: 
	* templates/language-release-ui-stats-modules.tmpl: 
	Display messages as well.

	* releases.py (Releases.get_stats_for_module): Return info
	messages as well.
	(Releases.list_modules): Use PO and POT info messages as well.

2006-03-08  Danilo Šegan  <danilo@gnome.org>

	* translation-teams.xml.in: Added "since" field for Serbian
	coordinator (myself ;).

2006-03-08  Danilo Šegan  <danilo@gnome.org>

	* templates/language-release-ui-stats.tmpl: check if
	$category.statistics.ui_size!=0, to show only categories with
	really translatable stuff.

2006-03-08  Danilo Šegan  <danilo@gnome.org>

	* data/main.css: Clean-ups.
	* utils.py (not_found_404): Added.
	* teams.py (TranslationTeams): introduce only_language parameter.

	* releases.py (Releases.list_modules): More stats.

	* templates/language-release-doc-stats.tmpl: 
	* templates/language-release-doc-stats-modules.tmpl: 
	* templates/language-release-ui-stats.tmpl: 
	* templates/language-release-ui-stats-modules.tmpl: 
	Added.
	
	* templates/language-release.tmpl: Include above templates.

2006-03-08  Danilo Šegan  <danilo@gnome.org>
