@@ -132,11 +132,11 @@
             <translation-domains><!-- defaults to a single "po" -->
         	<domain base="gtk+">
         	    <directory>po</directory>
-        	    <_description>UI translations</_description>
+        	    <_description>Core</_description>
                 </domain>
         	<domain base="gtk+-properties">
         	    <directory>po-properties</directory>
-        	    <_description>GObject Class Properties</_description>
+        	    <_description>Property Nicks</_description>
                 </domain>
             </translation-domains>
 	</branch>
